# GPT-tokenizer

./: README.md  pyproject.toml
minbpe/: basic.py  gpt4.py  regex_.py
notebooks/: testing.ipynb
tests/: test_tokenizer.py
