[tool.poetry]
name = "gpt-tokenizer"
version = "0.1.0"
description = ""
authors = ["Mkoek213 <mikolaj.kolek2@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sentencepiece = "^0.2.0"
pytest = "^8.3.3"
tiktoken = "^0.7.0"
regex = "^2024.9.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
